<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Services</string>
    <string name="pdf">PDF Download Activity</string>
    <string name="text">Text Download Activity</string>
    <string name="image">Image Download Activity</string>
    <string name="close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pdf_download">PDF Download Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="file_location_1">File Location 1: </string>
    <string name="file_location_2">File Location 2: </string>
    <string name="file_location_3">File Location 3: </string>
    <string name="file_location_4">File Location 4: </string>
    <string name="file_location_5">File Location 5: </string>
    <string name="file_location_6">File Location 6: </string>
    <string name="file_location_7">File Location 7: </string>
    <string name="file_location_8">File Location 8: </string>
    <string name="file_location_9">File Location 9: </string>
    <string name="file_location_10">File Location 10: </string>
    <string name="title_activity_image_download">Image Download Activity</string>
    <string name="title_activity_text_download">Text Download Activity</string>

</resources>
