<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.sjsu.services.app.pdfDownloadActivity$PlaceholderFragment"
    android:orientation="vertical">
    <TextView
        android:text="@string/title_activity_pdf_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16pt"
        android:gravity="center"/>



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="edu.sjsu.services.app.pdfDownloadActivity$PlaceholderFragment"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_location_1"/>
        <EditText
            android:id="@+id/pdfUrl1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="URL here"
            android:layout_weight="1"
            android:text="http://info.sjsu.edu/cgi-bin/pdfserv?ftok=soc-spring-courses"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="edu.sjsu.services.app.pdfDownloadActivity$PlaceholderFragment"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_location_2"/>
        <EditText
            android:id="@+id/pdfUrl2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="URL here"
            android:layout_weight="1"
            android:text="http://www.sjsu.edu/cs/docs/sp14/hours.pdf"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="edu.sjsu.services.app.pdfDownloadActivity$PlaceholderFragment"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_location_3"/>
        <EditText
            android:id="@+id/pdfUrl3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="URL here"
            android:layout_weight="1"
            android:text="http://www.engr.sjsu.edu/media/pdf/res/coe_res_facdev_grant_symp_120310_datta-barua.pdf"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="edu.sjsu.services.app.pdfDownloadActivity$PlaceholderFragment"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_location_4"/>
        <EditText
            android:id="@+id/pdfUrl4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="URL here"
            android:layout_weight="1"
            android:text="http://www.engr.sjsu.edu/media/pdf/res/coe_res_facdev_grant_symp_120310_eirinaki.pdf"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="edu.sjsu.services.app.pdfDownloadActivity$PlaceholderFragment"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_location_5"/>
        <EditText
            android:id="@+id/pdfUrl5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="URL here"
            android:layout_weight="1"
            android:text="http://www.engr.sjsu.edu/media/pdf/res/coe_res_facdev_grant_symp_120310_dessouky_patel.pdf"/>
    </LinearLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start Download"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="downloadPdfs"/>
    </RelativeLayout>

</LinearLayout>

</ScrollView>
